<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_dcs_turtlesim</name>
  <version>0.0.0</version>
  <description>ROS2 Package Wrapper for https://github.com/BlueAndi/DroidControlShip TurtleSim Demo under Webots</description>
  <maintainer email="github@schulznorbert.de">norbert</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
